add: finish Module M003

--- a/MODULES/M003.md
+++ b/MODULES/M003.md
@@ -1,1 +1,18 @@
-# M003
+# Module M003: Basic Mobile Repair Tools 
+
+![](../assets/modules/M003-basic-mobile-repair-1_old.jpeg)
+
+## Description
+This module aims to facilitate most repairs of phones, Laptops and other smaller mobile devices. Get screws out of difficult places and brush away small particles or glue back on loose parts.
+
+## Item List
+
+- 1x telescopic magnet tool
+- 1x small brush
+- 1x Essential Electronics Toolkit (iFixit)
+- 1x super glue
+
+## Packing Notes
+
+![](../assets/modules/M003-basic-mobile-repair-2_old.jpeg)
+`look inside the essential electronic toolkit from iFixit`
